# home_project_one

./: .flake8  README.md  pyproject.toml  requirements.txt
src/: category.py  masks.py  processing.py  product.py  utils.py  widget.py
tests/: conftest.py  test_category.py
